--- a/trunk/lampForSale/WebRoot/css/style.css
+++ b/trunk/lampForSale/WebRoot/css/style.css
@@ -32,7 +32,7 @@ background-color:#FFFFFF;
 width:900px;
 height:198px;
 padding:0px 0 0 0;
-background:url(../images/daohang1.jpg) no-repeat center;
+background:url(../images/daohang.jpg) no-repeat center;
 }
 #head{
 width:767px;
