--- a/trunk/lampForSale/WebRoot/css/head.css
+++ b/trunk/lampForSale/WebRoot/css/head.css
@@ -73,9 +73,9 @@ text-align:center;
 color:#fff;
 font-size:15px;
 line-height:27px;
-background:url(../images/button4.jpg) repeat-x center;
+background:url(../images/button.jpg) repeat-x center;
 }
 #head a:hover{
-background:url(../images/button4.jpg) repeat-x center;
+background:url(../images/button.jpg) repeat-x center;
 }
 
