--- a/trunk/lampForSale/WebRoot/css/main.css
+++ b/trunk/lampForSale/WebRoot/css/main.css
@@ -1,44 +1,50 @@
 /* CSS Document */
 @import "../css/head.css";
-/* -----------------ƒ⁄»›----------------------*/
-#ccenter{                    /*æ”÷–Œª÷√*/
-width:900px;
-height:auto;
-margin:0px auto auto auto;
-padding:0px;
-background-color:#ffffff;
-}
+
 /**************************∂•≤„*********************************/
 #top{
 margin:0px;
 padding:0;
 width:900px;
-height:420px;
+height:460px;
 clear:both;
 }
+#middle{
+margin:0px;
+padding:0;
+width:900px;
+height:600px;
+clear:both;
+}
+
 #include{
 width:860px;
 padding:0 0px 0 70px;
 }
 #left{
 width:480px;
-height:420px;
+height:460px;
 float:left;
 margin-left:40px;
 }
 #right{
-width:330px;
-height:420px;
+width:337px;
+height:454px;
 float:left;
 }
 .right_title{
 width:330px;
-height:20px;
-margin-bottom:15px;
+height:25px;
+margin-bottom:10px;
+}
+.li{
+width:325px;
+height:15px;
+background-image:url(../images/border.gif);
 }
 .left_title{
 width:330px;
-height:20px;
+height:25px;
 margin:30px 0 10px 0;
 padding-top:15px;
 }
@@ -60,6 +66,7 @@ padding:0 5px 0 0;
 .right_flash{
 width:330px;
 height:300px;
+margin-top:20px;
 }
 .content{
 width:480px;
@@ -67,13 +74,13 @@ height:350px;
 }
 .1{
 width:470px;
-height:150px;
+height:152px;
 border-bottom:1px #000;
 clear:both;
 }
 .line{
 padding:5px 0 5px 0;
-margin:15px 0 15px 0;
+margin:25px 0 15px 0;
 width:470px;
 height:3px;
 border-bottom:dashed 1px;
@@ -89,22 +96,23 @@ clear:both;
 }
 .cart{
 width:337px;
-float:left;
 height:40px;
 margin:10px 0 10px 0;
-background:url(../images/border.gif) no-repeat bottom center;
+background:url(../images/border.gif) no-repeat bottom;
 padding:0 0 20px 0;
 }
 .home_cart_content{
+width:120px;
+text-align:center;
 float:left;
 padding:3px;
 border:1px #eeedee solid;
-margin:10px 0 0 15px;
+margin:10px 0 0 20px;
 }
 a.view_cart{
 display:block;
 float:left;
-margin:12px 0 0 10px;
+margin:12px 0 0 20px;
 color:#990000;
 }
 span.red{
@@ -116,8 +124,13 @@ float:left;
 padding:0 5px 0 0;
 text-align:center;
 }
+.prod_img{
+width:153px;
+height:141px;
+}
 .prod_det_box{
 width:295px;
+height:152px;
 float:left;
 padding:0 0 0 15px;
 }
@@ -128,10 +141,12 @@ background:url(../images/box_top.gif) no-repeat center bottom;
 }
 .box_center{
 width:295px;
-height:auto;
+height:134px;
 background:url(../images/box_center.gif) repeat-y center;
 }
 .prod_title{
+width:200px;
+height:13px;
 color:#a81f22;
 padding:5px 0 0 15px;
 font-size:13px;
@@ -171,4 +186,3 @@ height:160px;
 #center_c{
 padding-left:6px;
 }
-
