--- a/trunk/lampForSale/WebRoot/css/show.css
+++ b/trunk/lampForSale/WebRoot/css/show.css
@@ -1,83 +1,82 @@
-/* CSS Document */
 @import "style_outline.css";
-/*-----------------------------------产品展示----------------------------------------------------*/
-.picture_show{
-width:420px;
-height:549px;
-margin-left:15px;
+.picture_show {
+    height: 535px;
+    margin-left: 15px;
+    width: 420px;
 }
-.col{
-width:420px;
-height:173px;
-margin-bottom:10px;
+.col {
+    height: 173px;
+    margin-bottom: 10px;
+    width: 420px;
 }
-.element{
-width:120px;
-height:150px;
-float:left;
-margin-right:3px;
+.element {
+    float: left;
+    height: 150px;
+    margin-right: 20px;
+    margin-top: 25px;
+    width: 120px;
 }
-.row{
-width:100px;
-height:150px;
-margin-right:0;
-margin-left:10px;
-float:left;
-border:dashed #999999 1px;
+.row {
+    border: 1px dashed #999999;
+    float: left;
+    height: 150px;
+    margin-left: 10px;
+    margin-right: 0;
+    width: 130px;
 }
-.row_title{
-width:100px;
-height:12px;
-color:#666666;
-margin-left:10px;
-padding:0 10px 5px 20px;
-text-align:center;
+.row_title {
+    color: #666666;
+    height: 12px;
+    margin-left: 10px;
+    padding: 0 10px 5px 20px;
+    text-align: center;
+    width: 100px;
 }
-.t{
-width:40px;
-height:5px;
-float:left;
+.t {
+    float: left;
+    height: 5px;
+    width: 40px;
 }
-.text{
-width:110px;
-height:12px;
-float:left;
-text-align:center;
+.text {
+    float: left;
+    height: 12px;
+    text-align: center;
+    width: 110px;
 }
-.text a{
-color:#666666;
+.text a {
+    color: #666666;
 }
-.text a:hover{
-color:#0000FF;
-text-decoration:underline;
+.text a:hover {
+    color: #0000FF;
+    text-decoration: underline;
 }
-.image{
-width:110px;
-height:96px;
-margin:10px;
-float:left;
+.image {
+    float: left;
+    height: 96px;
+    margin: 10px;
+    width: 110px;
 }
-.image img{
-width:105px; 
-height:92px;
+.image img {
+    height: 92px;
+    width: 105px;
 }
-.price{
-width:100px;
-height:23px;
-padding:5px 5px 0 15px;
-font-size:16px;
+.price {
+    font-size: 16px;
+    height: 23px;
+    padding: 5px 5px 0 15px;
+    width: 100px;
 }
-.sale{
-float:left;
+.sale {
+    float: left;
 }
-.num{
-float:left;
-margin:2px 0 0 15px;
+.num {
+    float: left;
+    margin: 2px 0 0 15px;
 }
-.number{
-width:340px;
-height:20px;
-margin:0px 5px 0 70px;
-padding:0;
-text-align:center;
+.number {
+    height: 20px;
+    margin: 20px 5px 0 70px;
+    padding: 0;
+    text-align: center;
+    width: 340px;
 }
