--- a/trunk/lampForSale/WebRoot/css/show.css
+++ b/trunk/lampForSale/WebRoot/css/show.css
@@ -13,6 +13,7 @@
     float: left;
     height: 150px;
     margin-right: 20px;
+    margin-bottom: -5px;
     margin-top: 25px;
     width: 120px;
 }
