--- a/trunk/lampForSale/WebRoot/css/cart.css
+++ b/trunk/lampForSale/WebRoot/css/cart.css
@@ -23,7 +23,6 @@ margin:5px;
 #show_border{
 width:455px;
 height:451px;
-border:dashed 1px;
 margin-left:20px;
 }
 .show_title{
@@ -90,27 +89,27 @@ float:left;
 /*------------------------------- Х№КѕПо----------------------------------------*/
 .show{
 width:455px;
-height:97px;
+height:70px;
 margin-bottom:5px;
 border-top:dashed 1px;
 }
 .picture_cart{
 width:75px;
 height:66px;
-margin:20px 5px 5px 5px;
+margin:5px 5px 5px 5px;
 float:left;
 }
 .picture_cart img{
-width:71px;
-height:62px;
+width:50px;
+height:50px;
 }
 .produce_name{
-width:105px;
-height:52px;
-float:left;
-margin:5px 5px 0 0;
-text-align:center;
-padding:35px 0 0 5px;
+ float: left;
+    height: 35px;
+    margin: 0 5px 0 0;
+    padding: 25px 0 0 5px;
+    text-align: center;
+    width: 105px;
 }
 .produce_name a{
 color:#000000;
@@ -121,21 +120,21 @@ text-decoration:underline;
 }
 .p_price{
 width:55px;
-height:52px;
+height:35px;
 float:left;
 font-size:14px;
-margin:5px 5px 0 0;
+margin:0 5px 0 0;
 text-align:center;
-padding:35px 0 0 0;
+padding:25px 0 0 0;
 }
 .p_count{
-width:70px;
-height:52px;
+
+height:35px;
 float:left;
 font-size:14px;
-margin:5px 5px 0 0;
+margin:0px 5px 0 0;
 text-align:center;
-padding:35px 0 0 0;
+padding:23px 0 0 0;
 }
 .p_total{
 width:60px;
@@ -144,7 +143,7 @@ float:left;
 font-size:14px;
 margin:5px 5px 0 0;
 text-align:center;
-padding:35px 0 0 0px;
+padding:20px 0 0 0px;
 }
 .p_delete{
 width:30px;
@@ -153,7 +152,7 @@ float:left;
 font-size:14px;
 margin:5px 0 0 5px;
 text-align:center;
-padding:35px 0 0 0px;
+padding:20px 0 0 0px;
 }
 input{
 width:20px;
