--- a/trunk/lampForSale/WebRoot/css/style1.css
+++ b/trunk/lampForSale/WebRoot/css/style1.css
@@ -163,6 +163,12 @@ margin:25px 0px 0px 40px;
 font-size:14px;
 
 }
+.zhanghao{
+ width:300px;
+height:30px;
+margin:25px 0px 0px 40px;
+font-size:14px;
+}
 .about_border{
 width:450px;
 height:310px;
